# draw-game-rust

backend/: Cargo.toml  folder.yml  repomix-output.xml
backend/bruno/: game_socket.yml  opencollection.yml  tets.yml
backend/bruno/environments/: Local.yml
backend/src/: main.rs  router.rs  state.rs
backend/src/handlers/: mod.rs  room.rs  ws.rs
backend/src/models/: chat.rs  game.rs  message.rs  mod.rs  response.rs  room.rs
